--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "html-react-parser": "^1.4.12",
     "react": "^17.0.2",
-    "react-copy-to-clipboard": "^5.0.4",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
-    "react-markdown": "^8.0.3",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
-    "remark-gfm": "^3.0.1",
+    "showdown": "^2.1.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
