--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "formik": "^2.4.2",
+    "html-react-parser": "^4.2.0",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "showdown": "^2.1.0",
     "tailwindcss": "^3.3.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.2.7",
+    "@types/showdown": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
