--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-toastify": "^9.1.3",
     "showdown": "^2.1.0",
     "tailwindcss": "^3.3.3",
     "yup": "^1.2.0"
